tests/paczka1/small_fuzzy/25023504.err
Error in line 12: yqds1 S864 48,3
Error in line 14: xuIA40UdTFC S981 7,6
